--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.0",
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.3.0",
+    "mongodb": "3.7",
     "mongoose": "^8.6.3",
     "multer": "^1.4.5-lts.1"
   },
