--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-async-errors": "^3.1.1",
+    "express-fileupload": "^1.5.1",
     "http-status-codes": "^2.3.0",
-    "mongodb": "3.7",
+    "mongodb": "^2.2.12",
     "mongoose": "^8.6.3",
     "multer": "^1.4.5-lts.1"
   },
